fix(dropdown): z-index fixed

--- a/src/components/Navigation/DesktopNavigation/DropdownMenu/DropdownMenu.scss
+++ b/src/components/Navigation/DesktopNavigation/DropdownMenu/DropdownMenu.scss
@@ -5,6 +5,7 @@ $module: 'DropdownMenu';
 
 .#{$module} {
     position: relative;
+    z-index: 1;
     img {
         max-width: 50px;
         height: auto;
